# mmgroup_fast

./: .gitignore  MANIFEST.in  README.rst  before_all.py  build_shared.py  cibuildwheel.bat  cleanup.py  config.py  copy_shared.py  display_monomial_xi.py  generate_code.py  make_all.bat  make_shuffle.py  pyproject.toml  requirements.txt  setup.py  shared_headers.py  zipme.py
docs/doxygen/: Doxyfile
docs/source/: api.rst  c_interface.rst  conf.py  index.rst
src/mmgroup_fast/: __init__.py  conftest.py
src/mmgroup_fast/dev/case_2B/: axis_class_2B.py  axis_class_2B_2group.py  axis_class_2B_axes.py  axis_class_2B_beautify.py  axis_class_2B_cent.py  axis_class_2B_reduce.py  axis_class_2B_sub.py  axis_class_2B_tables.py  axis_dict.py  certificate.txt  check_certificate.py  compute_order.py  gen_code.py  make_certificate.py  py_process_axis_2B.py
src/mmgroup_fast/dev/general/: fast_display.ske  from_mmgroup.ske  mm_op_fast_types.h  mmgroup_fast_display.h  mmgroup_fast_display.pxd  mmgroup_fast_display.pyx
src/mmgroup_fast/dev/mm_op_axis_mod3/: Case10A.py  Case10B.py  Case12C4B.py  Case2B.py  Case4A.py  Case4C.py  Case6A.py  Case6C.py  Case6F.py  Case8B.py  __init__.py  do_test_all.py  mm_axis3_case10A.ske  mm_axis3_case12C4B.ske  mm_axis3_case2B.ske  mm_axis3_case4A.ske  mm_axis3_case4C.ske  mm_axis3_case6A.ske  mm_axis3_case6C.ske  mm_axis3_case6F.ske  mm_axis3_case8B.ske  mm_axis3_fast_orderv_59.ske  mm_axis3_fast_reduce.ske  mm_axis3_fast_sym.ske  mm_axis3_hadamard256.ske  order_vector.py  order_vector_data.py  start_vector_59.py  start_vector_lfsr.py
(+44 files in other folders)
