[build-system]
requires = [
   "setuptools",
   "build",
   "mmgroup",
   "wheel", 
   "Cython", 
   "numpy", 
   "regex",
   "requests", 
   "pytest",
   "auditwheel; sys_platform == 'linux' or sys_platform == 'darwin' ", 
  # "patchelf; sys_platform == 'linux' or sys_platform == 'darwin' ", 
]
build-backend = "setuptools.build_meta"


[tool.cibuildwheel]
skip = "*-win32 *-manylinux_i686 cp37-* cp36-*  pp* *-musllinux*"
build-verbosity = 3
test-requires = [
   "pytest",
   "pytest-xdist",
   "numpy", 
   "scipy", 
   "requests", 
   "regex", 
   "mmgroup",
]
# Run the package tests using `pytest`
test-command = "pytest --pyargs mmgroup_fast  -m \"not slow\" -s"



[tool.cibuildwheel.linux]
repair-wheel-command = "export LD_LIBRARY_PATH=$(pwd)/src/mmgroup_fast:$(pwd)/../mmgroup/src/mmgroup && printenv LD_LIBRARY_PATH && auditwheel -v repair -w {dest_dir}  {wheel}"


[tool.cibuildwheel.linux.config-settings]
--build-option = ["global", "--march=native"]


[tool.cibuildwheel.macos]
# For background see https://cibuildwheel.readthedocs.io/en/stable/faq/#macos-passing-dyld_library_path-to-delocate
repair-wheel-command = "export DYLD_LIBRARY_PATH=$(pwd)/src/mmgroup_fast && delocate-wheel --require-archs {delocate_archs} -w {dest_dir} -v {wheel}"



